--- a/coc-settings.json
+++ b/coc-settings.json
@@ -42,6 +42,7 @@
     "git.addGBlameToBufferVar": true,
     "git.splitWindowCommand": "below 10sp",
     "java.clean.workspace": true,
+    "coc.preferences.formatOnSaveFiletypes": ["css", "markdown","vue"],
     "java.configuration.runtimes": [
         {
             "name": "JavaSE-14",
@@ -64,5 +65,6 @@
     "git.enableGutters": true,
     "Lua.telemetry.enable": true,
     "volar.takeOverMode.enabled": false,
-    "volar.autoCreateQuotes": true
+    "volar.autoCreateQuotes": true,
+    "snippets.ultisnips.pythonPrompt": false
 }
